refactor(ci): create custom Nx executor for container build and deploy
Add tools/executors/deploy with a 'container' executor that handles:
- Docker build and push with configurable image name and tag
- Automatic values.yaml update for the mapped deployment directory
- Per-project config in project.json (image, dockerfile, deployment)

Each app's container target now uses './tools/executors/deploy:container'
instead of 'nx:run-commands' with inline shell scripts. The project→deployment
mapping lives in each project.json rather than duplicated shell scripts.

CI workflows simplified:
- ci.yml: single 'nx affected -t container --tag=sha-xxx' replaces the
  shell-based DEPLOY_MAP + sed loop
- execute-release.yml: single 'nx run-many -t container --tag=version'
  replaces the per-app loop with version lookup

Usage:
  bun nx run camera:container --tag=sha-abc1234
  bun nx affected -t container --tag=sha-abc1234 --parallel=3
  bun nx affected -t container --tag=latest --updateDeployment=false

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,51 +122,20 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build & Push Affected Development Containers
+      - name: Build, push, and update deployments
         if: steps.check-affected.outputs.has_affected == 'true'
-        id: build
+        id: deploy
         run: |
           SHORT_SHA=$(git rev-parse --short HEAD)
           echo "sha=${SHORT_SHA}" >> $GITHUB_OUTPUT
-          echo "Building affected containers with tags: sha-${SHORT_SHA}, latest"
 
+          echo "🐳 Building affected containers with tag sha-${SHORT_SHA}..."
           bun nx affected -t container --tag=sha-${SHORT_SHA} --parallel=3
-          bun nx affected -t container --tag=latest --parallel=3
 
-          echo "✅ Affected containers built and pushed"
+          echo "🐳 Tagging affected containers as latest..."
+          bun nx affected -t container --tag=latest --updateDeployment=false --parallel=3
 
-      - name: Update deployment manifests with new image tags
-        if: steps.check-affected.outputs.has_affected == 'true'
-        run: |
-          SHORT_SHA=${{ steps.build.outputs.sha }}
-
-          # Map from Nx project name to deployment directory
-          declare -A DEPLOY_MAP
-          DEPLOY_MAP[ai-gateway]=ai-gateway
-          DEPLOY_MAP[aritzia-scanner]=aritzia-scanner
-          DEPLOY_MAP[camera]=camera
-          DEPLOY_MAP[camera-frontend]=camera-frontend
-          DEPLOY_MAP[finances]=finances
-          DEPLOY_MAP[finances-frontend]=finances-frontend
-          DEPLOY_MAP[landing]=landing-page
-          DEPLOY_MAP[recipes]=recipes
-          DEPLOY_MAP[recipes-frontend]=recipes-frontend
-          DEPLOY_MAP[server]=test-server
-          DEPLOY_MAP[wheel]=wheel
-
-          AFFECTED=$(bun nx show projects --affected --with-target container 2>/dev/null || echo "")
-
-          UPDATED=0
-          for PROJECT in $AFFECTED; do
-            DEPLOY_DIR="${DEPLOY_MAP[$PROJECT]}"
-            if [ -n "$DEPLOY_DIR" ] && [ -f "deployments/${DEPLOY_DIR}/values.yaml" ]; then
-              sed -i "s/^\(\s*tag:\s*\).*/\1sha-${SHORT_SHA}/" "deployments/${DEPLOY_DIR}/values.yaml"
-              echo "  Updated deployments/${DEPLOY_DIR}/values.yaml → sha-${SHORT_SHA}"
-              UPDATED=$((UPDATED + 1))
-            fi
-          done
-
-          echo "Updated ${UPDATED} deployment manifest(s)"
+          echo "✅ All affected containers built and pushed"
 
       - name: Commit and push deployment updates
         if: steps.check-affected.outputs.has_affected == 'true'
@@ -179,7 +148,7 @@ jobs:
           if git diff --cached --quiet; then
             echo "No deployment changes to commit"
           else
-            git commit -m "ci(deploy): update image tags to sha-${{ steps.build.outputs.sha }} [skip ci]"
+            git commit -m "ci(deploy): update image tags to sha-${{ steps.deploy.outputs.sha }} [skip ci]"
             git push
             echo "✅ Deployment manifests updated — ArgoCD will auto-sync"
           fi
