--- a/apps/recipes-frontend/project.json
+++ b/apps/recipes-frontend/project.json
@@ -8,7 +8,9 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/recipes-frontend",
         "index": "apps/recipes-frontend/src/index.html",
@@ -27,7 +29,9 @@
           "apps/recipes-frontend/src/styles.scss"
         ],
         "stylePreprocessorOptions": {
-          "includePaths": ["apps/recipes-frontend/src"]
+          "includePaths": [
+            "apps/recipes-frontend/src"
+          ]
         },
         "scripts": []
       },
@@ -89,24 +93,22 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/recipes-frontend/jest.config.ts"
       }
     },
     "container": {
-      "dependsOn": ["build"],
-      "executor": "nx:run-commands",
+      "dependsOn": [
+        "build"
+      ],
+      "executor": "./tools/executors/deploy:container",
       "options": {
-        "commands": [
-          "TAG={args.tag} && docker build -f apps/recipes-frontend/Dockerfile -t ethanelliottio/recipes-frontend:$TAG . && docker push ethanelliottio/recipes-frontend:$TAG"
-        ],
-        "parallel": false
-      },
-      "configurations": {
-        "latest": {
-          "tag": "latest"
-        }
+        "image": "ethanelliottio/recipes-frontend",
+        "dockerfile": "apps/recipes-frontend/Dockerfile",
+        "deployment": "recipes-frontend"
       }
     }
   }
