fix(ci): set NX_BASE to previous commit for affected detection
nx affected compares HEAD against defaultBase (main), but since CI
runs on main, HEAD=main and nothing is ever 'affected'. Set NX_BASE
to github.event.before so it compares against the previous push.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,9 @@ permissions:
 jobs:
   lint-and-build:
     runs-on: ubuntu-latest
+    env:
+      NX_BASE: ${{ github.event.before }}
+      NX_HEAD: ${{ github.sha }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -46,6 +49,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    env:
+      NX_BASE: ${{ github.event.before }}
+      NX_HEAD: ${{ github.sha }}
     steps:
       - uses: actions/checkout@v4
         with:
