ci: let Nx decide parallelism for all steps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,10 +54,10 @@ jobs:
           fi
 
       - name: Lint
-        run: bun nx ${{ steps.mode.outputs.cmd }} -t lint --parallel=3
+        run: bun nx ${{ steps.mode.outputs.cmd }} -t lint --parallel
 
       - name: Build
-        run: bun nx ${{ steps.mode.outputs.cmd }} -t build --parallel=3
+        run: bun nx ${{ steps.mode.outputs.cmd }} -t build --parallel
 
       - name: Check for affected container projects
         id: check-affected
@@ -91,7 +91,7 @@ jobs:
           echo "sha=${SHORT_SHA}" >> $GITHUB_OUTPUT
 
           echo "🐳 Building containers with tag ${SHORT_SHA}..."
-          bun nx ${{ steps.mode.outputs.cmd }} -t container --tag=${SHORT_SHA} --parallel=3
+          bun nx ${{ steps.mode.outputs.cmd }} -t container --tag=${SHORT_SHA} --parallel
 
           echo "✅ All containers built and pushed"
 
