fix(deploy): update DETECTION_INTERVAL to DETECTION_FPS env var

--- a/deployments/camera/values.yaml
+++ b/deployments/camera/values.yaml
@@ -34,7 +34,7 @@ env:
   CAMERA_ONVIF_PORT: '8000'
   CAMERA_RTSP_PORT: '8554'
   CAMERA_RTSP_PATH: '/Streaming/Channels/101'
-  DETECTION_INTERVAL: '3'
+  DETECTION_FPS: '5'
   DETECTION_THRESHOLD: '0.6'
   DATA_DIR: '/app/data'
 
