--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@simplewebauthn/server": "^13.1.2",
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "ag-grid-angular": "^34.1.1",
     "ag-grid-community": "^34.1.1",
     "bcrypt": "^6.0.0",
@@ -93,8 +94,8 @@
     "ng2-charts": "^8.0.0",
     "node-cron": "^4.2.1",
     "node-html-parser": "^7.0.2",
-    "pino": "^10.3.1",
     "onvif": "^0.8.1",
+    "pino": "^10.3.1",
     "pino-pretty": "^13.1.1",
     "plaid": "^41.0.0",
     "primeicons": "^7.0.0",
